# CMakeDemo

./: .gitignore  README.md
demo1/: CMakeLists.txt  Makefile  test.cpp
demo2/: CMakeLists.txt  Makefile  hello.cpp  test.cpp
demo2/src/: test.cpp
demo3/: CMakeLists.txt
demo3/hello/: CMakeLists.txt
demo4/: CMakeLists.txt  test.cpp
demo4/example/: test.cpp
demo4/hello/: hello.h
demo4/include/: hello.h
demo4/src/: hello.cpp
demo5/: Makefile
demo5/hello/: Makefile
demo5/src/: test.cpp
